--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=sa
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 server.port=8080
+spring.thymeleaf.prefix=classpath:/templates/
+spring.mvc.view.suffix=.html
+spring.mvc.static-path-pattern=static/**
